--- a/index.html
+++ b/index.html
@@ -5,9 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="javascript.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="javascript.js" defer></script>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="score"></div>
+        <div class="flex-container">
+            <div class="button rock">Rock</div>
+            <div class="button paper">Paper</div>
+            <div class="button scissors">Scissors</div>
+        </div>
+        <div class="results"></div>
+    </div>
 </body>
 </html>
